# CryptidSolver

./: .gitattributes  .gitignore  .pylintrc  README.md  interactive_solver.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: pipeline.yml
cryptidsolver/: __init__.py  clue.py  example_game.py  game.py  gamemap.py  infer.py  player.py  structure.py  tile.py
cryptidsolver/constant/: clues.py  limits.py
src/: clue.py  example_game.py  game.py  gamemap.py  player.py  structure.py  test_clue.py  test_gamemap.py  test_structure.py  test_tile.py
tests/: test_clue.py  test_game.py  test_gamemap.py  test_infer.py  test_player.py  test_structure.py  test_tile.py
tests/constant/: test_clues.py
