[build-system]
# Version 64 adds support for editable installations.
requires = ["setuptools >= 64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptidsolver"
version = "0.3.1"
description = "Solver for Cryptid boardgame"
authors = [
    {name = "Janne Holopainen", email = "manezki@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[dependency-groups]
dev = [
    "black==24.8.0",
    "mypy==1.14.1",
    "pylint==3.2.7",
    "tox==4.25.0",
    "pytest==8.4.2"
]

[tool.poetry.group.dev]
optional = true

[tool.setuptools]
packages = [
    "cryptidsolver",
    "cryptidsolver.constant"
]
