[build-system]
# Version 64 adds support for editable installations.
requires = ["setuptools >= 64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptidsolver"
version = "0.3.1"
description = "Solver for Cryptid boardgame"
authors = [
    {name = "Janne Holopainen", email = "manezki@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[dependency-groups]
dev = [
    "mypy==1.14.1",
    "pylint==3.2.7",
    "tox==4.25.0",
    "pytest==9.0.1",
    "ruff==0.13.2"
]

[tool.poetry.group.dev]
optional = true

[tool.setuptools]
packages = [
    "cryptidsolver",
    "cryptidsolver.constant"
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "F",    # Pyflakes
    "W",    # pycodestyle
    "E",    # pycodestyle
    "I",    # isort
    "UP",   # pyupgrade
    "PL",   # Pylint
    "RUF",  # Ruff-specific rules
]
ignore = ["E501"] # Ruff format takes care of line-too-long
