[build-system]
# Version 64 adds support for editable installations.
requires = ["setuptools >= 64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptidsolver"
version = "0.3.1"
description = "Solver for Cryptid boardgame"
authors = [
    {name = "Janne Holopainen", email = "manezki@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[dependency-groups]
dev = [
    "mypy==1.18.2",
    "pylint==4.0.2",
    "tox==4.32.0",
    "pytest==9.0.1",
    "ruff==0.14.4"
]

[tool.poetry.group.dev]
optional = true

[tool.setuptools]
packages = [
    "cryptidsolver",
    "cryptidsolver.constant"
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "F",    # Pyflakes
    "W",    # pycodestyle
    "E",    # pycodestyle
    "I",    # isort
    "UP",   # pyupgrade
    "PL",   # Pylint
    "RUF",  # Ruff-specific rules
]
ignore = ["E501"] # Ruff format takes care of line-too-long
